# challenge-django-consultant

./: .env  README.md  docker-compose.yaml
app/: Dockerfile
app/form/: app.js  index.html  styles.css
env/: dev-docker.env
lfg/: Dockerfile  pyproject.toml  pytest.ini  start-celeryworker  start-django
lfg/loans/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
lfg/loans/management/commands/: ensure_adminuser.py
lfg/loans/migrations/: 0001_initial.py
lfg/loans/tests/: conftest.py  test_api.py  test_serializer.py
lfg/setup/: celery.py  settings.py  urls.py
